--- a/main.html
+++ b/main.html
@@ -5,11 +5,16 @@
 	<title></title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </head>
 <body>
 	<div class="main">
+		<h2 class="instructions">Hover over Ryo to go to "ready" stance
+		<br>Click on Ryo to launch a Hadouken
+		<br>Press "x" to go to "cool" stance
+		</h2>
 		<div class="ryu">
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
